--- a/projeto_final/pubspec.yaml
+++ b/projeto_final/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  http: ^1.0.0
+  flutter_intro_slider: ^0.0.1
 
 dev_dependencies:
   flutter_test:
